Anchor link header overlap fix

--- a/css/main.css
+++ b/css/main.css
@@ -24,48 +24,7 @@ warning color -#
 error color - #
 
 */
-body {
-    background: linear-gradient(45deg,#8CBFA6,#5E7F6E);
-    color: #2F4037;
-    font-family: Verdana, Geneva, sans-serif;
-}
-article {
-  background: linear-gradient(45deg,#8CBFA6,#A8E5C7);
-  border: 1px solid grey;
-  border-radius: 5px;
-  /*margin-left: 1rem;*/
-  /*margin-top: 2rem;*/
-  padding: 1rem;
-  width: 21rem;
-}
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
-footer {
-    display: flex;
-    justify-content: center;
-}
-.flexContainer {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-}
-nav li {
-    display: inline-block;
-}
-header {
-    background: linear-gradient(45deg,#8CBFA6,#5E7F6E);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-section {
-    padding-top: 10em;
-}
+
 
 /*
  * Remove text-shadow in selection highlight:
@@ -147,10 +106,61 @@ textarea {
    ========================================================================== */
 
 
-
-
-
-
+body {
+    background: linear-gradient(45deg,#8CBFA6,#5E7F6E);
+    color: #2F4037;
+    font-family: Verdana, Geneva, sans-serif;
+}
+article {
+    background: linear-gradient(45deg,#8CBFA6,#A8E5C7);
+    border: 1px solid grey;
+    border-radius: 5px;
+    /*margin-left: 1rem;*/
+    /*margin-top: 2rem;*/
+    padding: 1rem;
+    width: 21rem;
+}
+html {
+    color: #222;
+    font-size: 1em;
+    line-height: 1.4;
+}
+footer {
+    display: flex;
+    justify-content: center;
+}
+.flexContainer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+}
+nav li {
+    display: inline-block;
+}
+header {
+    background: linear-gradient(45deg,#8CBFA6,#5E7F6E);
+    position: fixed;
+    width: 100%;
+    height: 7em;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+.content {
+    padding-top: 5em;
+}
+h2:before {
+    display: block;
+    content: "";
+    height: 5em;
+    margin-top: -4em;
+    visibility: hidden;
+}
+.headerLinkFloat {
+    float: right;
+    display: inline ;
+    margin-top: -3rem;
+}
 
 
 
